syntax = "proto3";

package user_role.v1;

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "common/v1/role.proto";
import "common/v1/annotations.proto";

option go_package = "github.com/Alexander-Mandzhiev/school_schedule/shared/pkg/proto/user_role/v1;user_role_v1";

// =============================================================================
// UserRoleService (user_role.v1)
// =============================================================================

service UserRoleService {
  // Назначение роли пользователю
  rpc Assign(AssignRequest) returns (google.protobuf.Empty) {
    option (common.v1.permission) = "user_role:write";
  }

  // Отзыв роли у пользователя
  rpc Revoke(RevokeRequest) returns (google.protobuf.Empty) {
    option (common.v1.permission) = "user_role:write";
  }

  // Получение ролей пользователя
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {
    option (common.v1.permission) = "user_role:read";
  }

  // Получение пользователей роли
  rpc GetRoleUsers(GetRoleUsersRequest) returns (GetRoleUsersResponse) {
    option (common.v1.permission) = "user_role:read";
  }
}

// =============================================================================
// Messages
// =============================================================================

// =============================================================================
// Assign
// =============================================================================

// Запрос на назначение роли пользователю
message AssignRequest {
  string user_id = 1 [(validate.rules).string.uuid = true];
  string role_id = 2 [(validate.rules).string.uuid = true];
  optional string assigned_by = 3 [(validate.rules).string.uuid = true];
}

// =============================================================================
// Revoke
// =============================================================================

// Запрос на отзыв роли у пользователя
message RevokeRequest {
  string user_id = 1 [(validate.rules).string.uuid = true];
  string role_id = 2 [(validate.rules).string.uuid = true];
}

// =============================================================================
// GetUserRoles
// =============================================================================

// Запрос на получение ролей пользователя
message GetUserRolesRequest {
  string user_id = 1 [(validate.rules).string.uuid = true];
}

// Ответ с ролями пользователя
message GetUserRolesResponse {
  repeated common.v1.RoleWithPermissions data = 1;
}

// =============================================================================
// GetRoleUsers
// =============================================================================

// Запрос на получение пользователей роли
message GetRoleUsersRequest {
  string role_id = 1 [(validate.rules).string.uuid = true];
  // Курсорная пагинация (более эффективна для больших наборов данных)
  optional int32 limit = 2 [(validate.rules).int32.gte = 1, (validate.rules).int32.lte = 100];
  optional string cursor = 3; // ID последнего пользователя с предыдущей страницы
}

// Ответ с пользователями роли
message GetRoleUsersResponse {
  repeated string user_ids = 1 [(validate.rules).repeated.items.string.uuid = true];
  int32 limit = 2;        // Лимит записей на страницу
  optional string next_cursor = 3; // Курсор для следующей страницы (если есть)
  bool has_more = 4;      // Есть ли еще записи
}
